fix: исправить overflow текста и картинок

--- a/blocks/gallery/__list-item/gallery__list-item.css
+++ b/blocks/gallery/__list-item/gallery__list-item.css
@@ -1,3 +1,4 @@
 .gallery__list-item {
   list-style-type: none;
+  overflow: hidden;
 }
